migrate to standard2.0

--- a/Src/iFramework.Plugins/IFramework.Sample.AuthWeb/IFramework.Sample.AuthWeb.csproj
+++ b/Src/iFramework.Plugins/IFramework.Sample.AuthWeb/IFramework.Sample.AuthWeb.csproj
@@ -26,6 +26,7 @@
     <NuGetPackageImportStamp>
     </NuGetPackageImportStamp>
     <TargetFrameworkProfile />
+    <Use64BitIISExpress />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -269,10 +270,6 @@
     <Content Include="Scripts\jquery-1.10.2.min.map" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\iFramework\IFramework.csproj">
-      <Project>{0b36292c-8849-441d-8fb8-a053d43a8e72}</Project>
-      <Name>IFramework</Name>
-    </ProjectReference>
     <ProjectReference Include="..\IFramework.SingleSignOn\IFramework.SingleSignOn.csproj">
       <Project>{6554cd55-20a4-4200-9c70-e14d61f2b30a}</Project>
       <Name>IFramework.SingleSignOn</Name>
