--- a/Src/Sample/Sample.CommandConsumer/App.config
+++ b/Src/Sample/Sample.CommandConsumer/App.config
@@ -2,14 +2,11 @@
 
 <configuration>
   <configSections>
-    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    
     <section name="frameworkConfiguration" type="IFramework.Config.FrameworkConfigurationSection, IFramework" />
-    <section name="entityFramework"
-             type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089"
-             requirePermission="false" />
-    <section name="unity"
-             type="Microsoft.Practices.Unity.Configuration.UnityConfigurationSection, Microsoft.Practices.Unity.Configuration" />
-  </configSections>
+    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    <section name="unity" type="Microsoft.Practices.Unity.Configuration.UnityConfigurationSection, Microsoft.Practices.Unity.Configuration" />
+  <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
   <frameworkConfiguration>
     <handlers>
       <handler name="CommandHandlers" sourceType="Assembly" source="Sample.CommandHandler" />
@@ -20,8 +17,7 @@
   </unity>
   <connectionStrings>
     <!--<add name="SampleModelContext" providerName="System.Data.SqlClient" connectionString="Server=.;Database=SampleModelContext;User ID=sa;password=zhj777"/>-->
-    <add name="SampleModelContext" providerName="System.Data.SqlClient"
-         connectionString="Server=(localdb)\projects;Database=SampleModelContext;Integrated Security=true;" />
+    <add name="SampleModelContext" providerName="System.Data.SqlClient" connectionString="Server=(localdb)\projects;Database=SampleModelContext;Integrated Security=true;" />
     <!--<add name="MessageStore" providerName="System.Data.SqlClient" connectionString="Server=.\sqlexpress;Database=SampleMessageStore;Integrated Security=true;" />-->
   </connectionStrings>
   <startup>
@@ -37,8 +33,7 @@
       </parameters>
     </defaultConnectionFactory>
     <providers>
-      <provider invariantName="System.Data.SqlClient"
-                type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
+      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
   <runtime>
