--- a/Src/iFramework.Plugins/IFramework.Sample.AuthWeb/Web.config
+++ b/Src/iFramework.Plugins/IFramework.Sample.AuthWeb/Web.config
@@ -6,9 +6,9 @@
   -->
 <configuration>
   <configSections>
-    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-  </configSections>
+  <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-IFramework.Sample.AuthWeb-20160414031725.mdf;Initial Catalog=aspnet-IFramework.Sample.AuthWeb-20160414031725;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
