--- a/Src/iFramework.Plugins/FoundatioTest/FoundatioTest.csproj
+++ b/Src/iFramework.Plugins/FoundatioTest/FoundatioTest.csproj
@@ -86,6 +86,7 @@
     <Reference Include="System.IO.Compression" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CacheTests.cs" />
     <Compile Include="DistributedLockTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
