--- a/Src/IFramework4.5Tests/IFramework.Tests.csproj
+++ b/Src/IFramework4.5Tests/IFramework.Tests.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{5B27A727-B95D-49EC-8B70-76C5354D9098}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>IFramework4._5Tests</RootNamespace>
-    <AssemblyName>IFramework4.5Tests</AssemblyName>
+    <RootNamespace>IFramework.Tests</RootNamespace>
+    <AssemblyName>IFramework.Tests</AssemblyName>
     <TargetFrameworkVersion>v4.5.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{3AC096D0-A1C2-E12C-1390-A8335801FDAB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
@@ -134,6 +134,7 @@
     <Compile Include="Mailboxes\MailboxTest.cs" />
     <Compile Include="Mailboxes\MessageContext.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UtilityTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\iFramework.Plugins\IFramework.Log4Net\IFramework.Log4Net.csproj">
