--- a/Src/iFramework/IFramework.csproj
+++ b/Src/iFramework/IFramework.csproj
@@ -5,14 +5,24 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Infrastructure\Logging\**" />
+    <EmbeddedResource Remove="Infrastructure\Logging\**" />
+    <None Remove="Infrastructure\Logging\**" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Remove="DependencyInjection\ILogInterceptionBehavior.cs" />
     <Compile Remove="DependencyInjection\IoCInstanceProvider.cs" />
     <Compile Remove="DependencyInjection\IoCServiceBehavior.cs" />
+    <Compile Remove="DependencyInjection\LogInterceptionAttribute.cs" />
+    <Compile Remove="DependencyInjection\LogInterceptionBehavior.cs" />
   </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.CSharp" Version="4.4.1" />
     <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="2.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="2.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="2.0.0" />
     <PackageReference Include="System.ComponentModel.Annotations" Version="4.4.1" />
     <PackageReference Include="System.Data.Common" Version="4.3.0" />
     <PackageReference Include="System.Reflection.Emit" Version="4.3.0" />
