--- a/Src/IFramework/IFramework.csproj
+++ b/Src/IFramework/IFramework.csproj
@@ -11,6 +11,14 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Remove="DependencyInjection\ILogInterceptionBehavior.cs" />
+    <Compile Remove="DependencyInjection\IoCInstanceProvider.cs" />
+    <Compile Remove="DependencyInjection\IoCServiceBehavior.cs" />
+    <Compile Remove="DependencyInjection\LogInterceptionAttribute.cs" />
+    <Compile Remove="DependencyInjection\LogInterceptionBehavior.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.CSharp" Version="4.4.1" />
     <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="2.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="2.0.0" />
