--- a/Src/iFramework.Plugins/IFramework.MessageStores/IFramework.MessageStores.Sqlserver.csproj
+++ b/Src/iFramework.Plugins/IFramework.MessageStores/IFramework.MessageStores.Sqlserver.csproj
@@ -9,7 +9,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\IFramework\IFramework.csproj" />
+    <ProjectReference Include="..\..\iFramework\IFramework.csproj" />
     <ProjectReference Include="..\IFramework.EntityFrameworkCore\IFramework.EntityFrameworkCore.csproj" />
   </ItemGroup>
 
