--- a/Src/iFramework.Plugins/IFramework.DependencyInjection.Autofac/IFramework.DependencyInjection.Autofac.csproj
+++ b/Src/iFramework.Plugins/IFramework.DependencyInjection.Autofac/IFramework.DependencyInjection.Autofac.csproj
@@ -13,7 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\IFramework\IFramework.csproj" />
+    <ProjectReference Include="..\..\iFramework\IFramework.csproj" />
   </ItemGroup>
 
 </Project>
