clean up appsettings use log4net instead of built-in Console & Debug logger

--- a/Src/Sample/Sample.CommandServiceCore/appsettings.Production.json
+++ b/Src/Sample/Sample.CommandServiceCore/appsettings.Production.json
@@ -1,14 +1,13 @@
 ﻿{
   "AppSettings": {
-    "Debug": "false",
-    "Profile": "production"
+    "Debug": "false"
   },
   "Logging": {
     "IncludeScopes": false,
     "LogLevel": {
       "Default": "Debug",
-      "System": "Information",
-      "Microsoft": "Information"
+      "System": "Warning",
+      "Microsoft": "Warning"
     }
   }
 }
