--- a/Src/Sample/Sample.CommandServiceCore/Properties/launchSettings.json
+++ b/Src/Sample/Sample.CommandServiceCore/Properties/launchSettings.json
@@ -12,7 +12,7 @@
       "commandName": "IISExpress",
       "launchBrowser": true,
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "qa"
+        "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
     "Sample.CommandServiceCore": {
