--- a/Src/Sample/Sample.CommandServiceCore/appsettings.json
+++ b/Src/Sample/Sample.CommandServiceCore/appsettings.json
@@ -6,7 +6,19 @@
   "Logging": {
     "IncludeScopes": false,
     "LogLevel": {
-      "Default": "Warning"
+      "Default": "Debug",
+      "System": "Warning",
+      "Microsoft": "Warning"
+    },
+    "Console": {
+      "LogLevel": {
+        "Default": "None"
+      }
+    },
+    "Debug":{
+      "LogLevel": {
+        "Default": "None"
+      }
     }
   }
 }
