--- a/Src/Sample/Sample.CommandServiceCore/appsettings.json
+++ b/Src/Sample/Sample.CommandServiceCore/appsettings.json
@@ -1,7 +1,29 @@
 ﻿{
+  "ConnectionStrings": {
+    "SampleModelContext": "Server=(localdb)\\projects;Database=SampleModelContext.Core;Integrated Security=true;"
+  },
   "AppSettings": {
     "Debug": "true",
     "CommandTypeTemplate": "Sample.Command.{0}, Sample.Command"
+  },
+  "FrameworkConfiguration": {
+    "handlers": [
+      {
+        "name": "ApplicationEventSubscribe",
+        "sourceType": "Assembly",
+        "source": "Sample.ApplicationEventSubscriber"
+      },
+      {
+        "name": "DomainEventSubscriber",
+        "sourceType": "Assembly",
+        "source": "Sample.AsyncDomainEventSubscriber"
+      },
+      {
+        "name": "CommandHandlers",
+        "sourceType": "Assembly",
+        "source": "Sample.CommandHandler"
+      }
+    ]
   },
   "Logging": {
     "IncludeScopes": false,
