--- a/Src/Sample/Sample.CommandServiceCore/Properties/launchSettings.json
+++ b/Src/Sample/Sample.CommandServiceCore/Properties/launchSettings.json
@@ -18,7 +18,7 @@
       "commandName": "Project",
       "launchBrowser": true,
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "qa"
+        "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "applicationUrl": "http://localhost:29581/"
     }
