--- a/Src/Dockerfile
+++ b/Src/Dockerfile
@@ -1,8 +1,10 @@
-FROM microsoft/dotnet:2.0-runtime
+FROM microsoft/dotnet:2.0-sdk AS build-env
 COPY . /app
-WORKDIR /app/src/Sample/Sample.CommandServiceCore
+WORKDIR /app/Sample/Sample.CommandServiceCore
 RUN dotnet publish -c Release -o out
+
+FROM microsoft/dotnet:2.0-runtime
 WORKDIR /app
-COPY /app/src/Sample/Sample.CommandServiceCore/out ./
+COPY --from=build-env /app/Sample/Sample.CommandServiceCore/out ./
 EXPOSE 80
 ENTRYPOINT ["dotnet", "Sample.CommandServiceCore.dll"]
