--- a/Src/Dockerfile
+++ b/Src/Dockerfile
@@ -3,7 +3,7 @@ COPY . /app
 WORKDIR /app/Sample/Sample.CommandServiceCore
 RUN dotnet publish -c Release -o out
 
-FROM microsoft/dotnet:2.0-runtime
+FROM microsoft/aspnetcore
 WORKDIR /app
 COPY --from=build-env /app/Sample/Sample.CommandServiceCore/out ./
 EXPOSE 80
