add UseUrls to support customed port by "dotnet xxx.dll --urls http://*:5001"

--- a/Src/Sample/Sample.CommandServiceCore/appsettings.json
+++ b/Src/Sample/Sample.CommandServiceCore/appsettings.json
@@ -7,6 +7,7 @@
     "Debug": "true",
     "CommandTypeTemplate": "Sample.Command.{0}, Sample.Command"
   },
+  "urls": "http://localhost:29581/",
   "FrameworkConfiguration": {
     "handlers": [
       {
