ignore exception.sitetaret when serializing to json

--- a/Src/Sample/Sample.CommandServiceCore/log4net.config
+++ b/Src/Sample/Sample.CommandServiceCore/log4net.config
@@ -63,11 +63,11 @@
   <!--<logger name="CommandBus">
     <level value="DEBUG"/>
     <appender-ref ref="debugRollingFile"/>
-  </logger>
-  <logger name="CommandController">
+  </logger> -->
+  <logger name="CommandConsumer">
     <level value="DEBUG"/>
     <appender-ref ref="debugRollingFile"/>
-  </logger>-->
+  </logger>
   <logger name="CommunityCommandHandler">
     <level value="DEBUG"/>
     <appender-ref ref="debugRollingFile"/>
