--- a/Src/docker-compose.override.yml
+++ b/Src/docker-compose.override.yml
@@ -1,8 +1,6 @@
 version: '3'
 
 services:
-  sample.commandservicecore:
+  iframework.sample:
     environment:
-      - ASPNETCORE_ENVIRONMENT=Development
-    ports:
-      - "80"
+      - ASPNETCORE_ENVIRONMENT=Product
