--- a/Src/Sample/Sample.CommandServiceCore/Sample.CommandServiceCore.csproj
+++ b/Src/Sample/Sample.CommandServiceCore/Sample.CommandServiceCore.csproj
@@ -29,6 +29,7 @@
     <PackageReference Include="Microsoft.AspNetCore.Authentication.Cookies" Version="2.0.1" />
     <PackageReference Include="Microsoft.Extensions.Logging.Log4Net.AspNetCore" Version="2.0.1" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.0.2" />
+    <PackageReference Include="System.Data.SqlClient" Version="4.5.0-preview2-26308-03" />
   </ItemGroup>
 
   <ItemGroup>
