--- a/Src/Sample/Sample.CommandServiceCore/log4net.config
+++ b/Src/Sample/Sample.CommandServiceCore/log4net.config
@@ -64,7 +64,7 @@
     <level value="DEBUG"/>
     <appender-ref ref="debugRollingFile"/>
   </logger> -->
-  <logger name="CommandConsumer">
+  <logger name="CommandProcessor">
     <level value="DEBUG"/>
     <appender-ref ref="debugRollingFile"/>
   </logger>
