--- a/Src/.vscode/launch.json
+++ b/Src/.vscode/launch.json
@@ -1,51 +1,79 @@
 {
-   // Use IntelliSense to find out which attributes exist for C# debugging
-   // Use hover for the description of the existing attributes
-   // For further information visit https://github.com/OmniSharp/omnisharp-vscode/blob/master/debugger-launchjson.md
-   "version": "0.2.0",
-   "configurations": [
-    {
-        "name": ".NET Core Launch docker",
-        "type": "coreclr",
-        "request": "launch",
-       // "processId": "${command:pickRemoteProcess}",
-        //"preLaunchTask": "build",
-        "env": {
-            "ASPNETCORE_ENVIRONMENT":"Development"
+    // Use IntelliSense to find out which attributes exist for C# debugging
+    // Use hover for the description of the existing attributes
+    // For further information visit https://github.com/OmniSharp/omnisharp-vscode/blob/master/debugger-launchjson.md
+    "version": "0.2.0",
+    "configurations": [
+        {
+            "name": ".NET Core Launch docker",
+            "type": "coreclr",
+            "request": "launch",
+            // "processId": "${command:pickRemoteProcess}",
+            //"preLaunchTask": "build",
+            "env": {
+                "ASPNETCORE_ENVIRONMENT": "Development"
+            },
+            "program": "/app/workspace/publishes/Sample.Core/Sample.CommandServiceCore.dll",
+            "args": [],
+            "cwd": "/app/workspace/publishes/Sample.Core",
+            "stopAtEntry": false,
+            "console": "internalConsole",
+            //"sourceFileMap": {
+            //     "/mnt/e/Workspaces/LLY.Membership/SourceCode/LLY.Membership-DotNetCore": "e:/Workspaces/LLY.Membership/SourceCode/LLY.Membership-DotNetCore"
+            // },
+            "pipeTransport": {
+                "pipeCwd": "${workspaceRoot}",
+                "pipeProgram": "bash",
+                "pipeArgs": [
+                    "-c",
+                    "docker -H tcp://192.168.99.101:2375 exec -i aspnetcore ${debuggerCommand}"
+                ],
+                "debuggerPath": "/root/vsdbg/vsdbg"
+            }
         },
-        "program": "/app/workspace/publishes/Sample.Core/Sample.CommandServiceCore.dll",
-        "args": [],
-        "cwd": "/app/workspace/publishes/Sample.Core",
-        "stopAtEntry": false,
-        "console": "internalConsole",
-        //"sourceFileMap": {
-       //     "/mnt/e/Workspaces/LLY.Membership/SourceCode/LLY.Membership-DotNetCore": "e:/Workspaces/LLY.Membership/SourceCode/LLY.Membership-DotNetCore"
-       // },
-        "pipeTransport": {
-            "pipeCwd": "${workspaceRoot}",
-            "pipeProgram": "bash",
-            "pipeArgs": [ "-c", "docker -H tcp://192.168.99.101:2375 exec -i aspnetcore ${debuggerCommand}"],
-            "debuggerPath": "/root/vsdbg/vsdbg"
-        }
-    },
-    {
-        "name": ".NET Core Launch (web application)",
-        "type": "coreclr",
-        "request": "launch",
-        "preLaunchTask": "build",
-        // If you have changed target frameworks, make sure to update the program path.
-        "program": "${workspaceFolder}/Sample/Sample.CommandServiceCore/bin/Debug/netcoreapp2.0/Sample.CommandServiceCore.dll",
-        "args": [],
-        "cwd": "${workspaceFolder}/Sample/Sample.CommandServiceCore",
-        // For more information about the 'console' field, see https://github.com/OmniSharp/omnisharp-vscode/blob/master/debugger-launchjson.md#console-terminal-window
-        "console": "internalConsole",
-        "stopAtEntry": false,
-        "internalConsoleOptions": "openOnSessionStart",
-        "env": {
-            "ASPNETCORE_ENVIRONMENT":"Development"
-        }
-    },    
-    {
+        {
+            "name": "WLS Attach Bash",
+            "type": "coreclr",
+            "request": "launch",
+            "preLaunchTask": "publish",
+            "env": {
+                "ASPNETCORE_ENVIRONMENT": "Development"
+            },
+            "program": "/mnt/d/Docker/workspace/IFramework.netcore/Src/publishes/Sample.CommandServiceCore.dll",
+            "args": [],
+            "cwd": "/mnt/d/Docker/workspace/IFramework.netcore/Src/publishes",
+            "stopAtEntry": false,
+            "console": "internalConsole",
+            "sourceFileMap": {
+                "/mnt/d/Docker/workspace/IFramework.netcore/Src": "${workspaceFolder}"
+            },
+            "pipeTransport": {
+                "pipeCwd": "${workspaceFolder}",
+                "pipeProgram": "bash.exe",
+                "pipeArgs": [
+                    "-c"
+                ],
+                "debuggerPath": "~/vsdbg/vsdbg"
+            }
+        },
+        {
+            "name": ".NET Core Launch (web application)",
+            "type": "coreclr",
+            "request": "launch",
+            "preLaunchTask": "build",
+            // If you have changed target frameworks, make sure to update the program path.
+            "program": "${workspaceFolder}/Sample/Sample.CommandServiceCore/bin/Debug/netcoreapp2.0/Sample.CommandServiceCore.dll",
+            "args": [],
+            "cwd": "${workspaceFolder}/Sample/Sample.CommandServiceCore",
+            // For more information about the 'console' field, see https://github.com/OmniSharp/omnisharp-vscode/blob/master/debugger-launchjson.md#console-terminal-window
+            "console": "internalConsole",
+            "stopAtEntry": false,
+            "internalConsoleOptions": "openOnSessionStart",
+            "env": {
+                "ASPNETCORE_ENVIRONMENT": "Development"
+            }
+        },
+        {
             "name": ".NET Core Launch (console)",
             "type": "coreclr",
             "request": "launch",
