--- a/Src/.vscode/tasks.json
+++ b/Src/.vscode/tasks.json
@@ -2,12 +2,23 @@
     "version": "2.0.0",
     "tasks": [
         {
-            "taskName": "build",
+            "label": "build",
             "command": "dotnet",
             "type": "process",
             "args": [
                 "build",
                 "${workspaceFolder}/IFramework.Test/IFramework.Test.csproj"
+            ],
+            "problemMatcher": "$msCompile"
+        },
+        {
+            "label": "publish",
+            "command": "dotnet",
+            "type":"shell",
+            "args":[
+                "publish",
+                 "-o ${workspaceFolder}\\publishes",
+                 "${workspaceFolder}\\Sample\\Sample.CommandServiceCore"
             ],
             "problemMatcher": "$msCompile"
         }
