--- a/Src/Sample/Sample.CommandServiceCore/Sample.CommandServiceCore.csproj
+++ b/Src/Sample/Sample.CommandServiceCore/Sample.CommandServiceCore.csproj
@@ -13,6 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Remove="CommandInputExtension\FormDataExtension.cs" />
     <Compile Remove="Controllers\ValuesController.cs" />
   </ItemGroup>
 
