--- a/Src/iFramework.Plugins/EQueueBroker/App.config
+++ b/Src/iFramework.Plugins/EQueueBroker/App.config
@@ -1,74 +1,28 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-
 <configuration>
-  <startup>
-    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.1" />
-  </startup>
   <runtime>
     <gcServer enabled="true" />
     <gcConcurrent enabled="true" />
-    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
-      <dependentAssembly>
-        <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-9.0.0.0" newVersion="9.0.0.0" />
-      </dependentAssembly>
-      <dependentAssembly>
-        <assemblyIdentity name="Autofac" publicKeyToken="17863af14b0044da" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-4.6.1.0" newVersion="4.6.1.0" />
-      </dependentAssembly>
-      <dependentAssembly>
-        <assemblyIdentity name="log4net" publicKeyToken="669e0ddf0bb1aa2a" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-2.0.8.0" newVersion="2.0.8.0" />
-      </dependentAssembly>
-      <dependentAssembly>
-        <assemblyIdentity name="Microsoft.Extensions.Configuration.Abstractions" publicKeyToken="adb9793829ddae60" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-1.1.2.0" newVersion="1.1.2.0" />
-      </dependentAssembly>
-      <dependentAssembly>
-        <assemblyIdentity name="Microsoft.Extensions.FileProviders.Abstractions" publicKeyToken="adb9793829ddae60" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-1.1.1.0" newVersion="1.1.1.0" />
-      </dependentAssembly>
-      <dependentAssembly>
-        <assemblyIdentity name="Microsoft.Extensions.Configuration.FileExtensions" publicKeyToken="adb9793829ddae60" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-1.1.2.0" newVersion="1.1.2.0" />
-      </dependentAssembly>
-      <dependentAssembly>
-        <assemblyIdentity name="Microsoft.Extensions.FileProviders.Physical" publicKeyToken="adb9793829ddae60" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-1.1.1.0" newVersion="1.1.1.0" />
-      </dependentAssembly>
-      <dependentAssembly>
-        <assemblyIdentity name="Microsoft.Extensions.Configuration" publicKeyToken="adb9793829ddae60" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-1.1.2.0" newVersion="1.1.2.0" />
-      </dependentAssembly>
-      <dependentAssembly>
-        <assemblyIdentity name="Microsoft.Extensions.Primitives" publicKeyToken="adb9793829ddae60" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-1.1.1.0" newVersion="1.1.1.0" />
-      </dependentAssembly>
-      <dependentAssembly>
-        <assemblyIdentity name="Microsoft.Extensions.FileSystemGlobbing" publicKeyToken="adb9793829ddae60" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-1.1.1.0" newVersion="1.1.1.0" />
-      </dependentAssembly>
-    </assemblyBinding>
   </runtime>
   <appSettings>
-    <add key="nameServerAddress" value="" />
-    <add key="brokerName" value="Broker1" />
-    <add key="groupName" value="BrokerGroup1" />
-    <add key="producerPort" value="5000" />
-    <add key="consumerPort" value="5001" />
-    <add key="adminPort" value="5002" />
-    <add key="fileStoreRootPath" value="d:\equeue-store" />
-    <add key="isMemoryMode" value="false" />
-    <add key="syncFlush" value="false" />
-    <add key="notifyWhenMessageArrived" value="true" />
-    <add key="chunkSize" value="256" />
-    <!--MB-->
-    <add key="chunkWriteBuffer" value="256" />
-    <!--KB-->
-    <add key="enableCache" value="true" />
-    <add key="flushInterval" value="100" />
-    <!--Milliseconds-->
-    <add key="chunkCacheMinPercent" value="40" />
-    <add key="messageWriteQueueThreshold" value="10000" />
+    <add key="bindingAddress" value=""/>
+    <add key="nameServerAddress" value=""/>
+    <add key="brokerName" value="Broker1"/>
+    <add key="groupName" value="BrokerGroup1"/>
+    <add key="producerPort" value="5000"/>
+    <add key="consumerPort" value="5001"/>
+    <add key="adminPort" value="5002"/>
+    <add key="fileStoreRootPath" value="d:\equeue-store1"/>
+    <add key="isMemoryMode" value="false"/>
+    <add key="syncFlush" value="false"/>
+    <add key="deleteMessageIgnoreUnConsumed" value="false"/>
+    <add key="notifyWhenMessageArrived" value="true"/>
+    <add key="chunkSize" value="256"/><!--MB-->
+    <add key="chunkWriteBuffer" value="256"/><!--KB-->
+    <add key="enableCache" value="true"/>
+    <add key="flushInterval" value="100"/><!--Milliseconds-->
+    <add key="chunkCacheMinCount" value="1"/>
+    <add key="chunkCacheMaxCount" value="2"/>
+    <add key="messageWriteQueueThreshold" value="10000"/>
   </appSettings>
 </configuration>
