--- a/Src/iFramework.Plugins/EQueueBroker/App.config
+++ b/Src/iFramework.Plugins/EQueueBroker/App.config
@@ -12,7 +12,7 @@
     <add key="producerPort" value="5000"/>
     <add key="consumerPort" value="5001"/>
     <add key="adminPort" value="5002"/>
-    <add key="fileStoreRootPath" value="d:\equeue-store1"/>
+    <add key="fileStoreRootPath" value="equeue-store1"/>
     <add key="isMemoryMode" value="false"/>
     <add key="syncFlush" value="false"/>
     <add key="deleteMessageIgnoreUnConsumed" value="false"/>
