--- a/Src/Sample/Sample.CommandService/log4net.config
+++ b/Src/Sample/Sample.CommandService/log4net.config
@@ -59,6 +59,7 @@
   <root>
     <!--all priority options： OFF、FATAL、ERROR, WARN, INFO, DEBUG, ALL-->
     <!--取消这里注释记录所有debug log-->
+    <appender-ref ref="debugRollingFile" />
     <appender-ref ref="errorRollingFile" />
     <appender-ref ref="traceAppender" />
   </root>
