--- a/Src/Sample/Sample.CommandServiceCore/log4net.config
+++ b/Src/Sample/Sample.CommandServiceCore/log4net.config
@@ -51,7 +51,6 @@
   <root>
     <!--all priority options： OFF、FATAL、ERROR, WARN, INFO, DEBUG, ALL-->
     <!--取消这里注释记录所有debug log-->
-    <appender-ref ref="debugRollingFile" />
     <appender-ref ref="errorRollingFile" />
     <appender-ref ref="traceAppender" />
   </root>
@@ -60,10 +59,10 @@
     <level value="DEBUG"/>
     <appender-ref ref="debugRollingFile"/>
   </logger>-->
-  <!--<logger name="CommandBus">
+  <logger name="HomeController">
     <level value="DEBUG"/>
     <appender-ref ref="debugRollingFile"/>
-  </logger> -->
+  </logger>
   <logger name="CommandProcessor">
     <level value="DEBUG"/>
     <appender-ref ref="debugRollingFile"/>
