--- a/Src/Sample/Sample.CommandServiceCore/log4net.config
+++ b/Src/Sample/Sample.CommandServiceCore/log4net.config
@@ -1,13 +1,13 @@
 ﻿<log4net>
   <appender name="errorRollingFile" type="log4net.Appender.RollingFileAppender,log4net">
     <!--日志文件名-->
-    <file value="log/errorlog.txt" />
+    <file value="log/.error" />
     <preserveLogFileNameExtension value="true" />
     <!--是否在文件中追加-->
     <appendToFile value="true" />
     <!--按照文件的大小进行变换日志文件-->
     <rollingStyle value="Composite" />
-    <datePattern value="yyyy-MM-dd" />
+    <datePattern value="yyyy-MM/dd" />
     <!--最大变换数量-->
     <maxSizeRollBackups value="10" />
     <!--最大文件大小-->
@@ -21,13 +21,13 @@
   </appender>
   <appender name="debugRollingFile" type="log4net.Appender.RollingFileAppender,log4net">
     <!--日志文件名-->
-    <file value="log/debuglog_.txt" />
+    <file value="log/.debug" />
     <preserveLogFileNameExtension value="true" />
     <!--是否在文件中追加-->
     <appendToFile value="true" />
     <!--按照文件的大小进行变换日志文件-->
     <rollingStyle value="Composite" />
-    <datePattern value="yyyy-MM-dd" />
+    <datePattern value="yyyy-MM/dd" />
     <!--最大变换数量-->
     <maxSizeRollBackups value="10" />
     <!--最大文件大小-->
