--- a/Src/iFramework.Plugins/IFramework.Log4Net/IFramework.Log4Net.csproj
+++ b/Src/iFramework.Plugins/IFramework.Log4Net/IFramework.Log4Net.csproj
@@ -7,7 +7,7 @@
   <ItemGroup>
     <PackageReference Include="log4net" Version="2.0.8" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="2.0.0" />
-    <PackageReference Include="Microsoft.Extensions.Logging" Version="2.1.0-preview3-32034" />
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="2.0.1" />
     <PackageReference Include="Microsoft.Extensions.Logging.Configuration" Version="2.0.1" />
   </ItemGroup>
 
