--- a/Src/Sample/Sample.CommandService/packages.config
+++ b/Src/Sample/Sample.CommandService/packages.config
@@ -12,6 +12,7 @@
   <package id="jQuery.UI.Combined" version="1.12.1" targetFramework="net461" />
   <package id="jQuery.Validation" version="1.17.0" targetFramework="net461" />
   <package id="knockoutjs" version="3.4.2" targetFramework="net461" />
+  <package id="log4net" version="2.0.8" targetFramework="net461" />
   <package id="Microsoft.AspNet.Cors" version="5.2.4" targetFramework="net461" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.4" targetFramework="net461" />
   <package id="Microsoft.AspNet.Mvc.FixedDisplayModes" version="5.0.0" targetFramework="net45" />
@@ -47,7 +48,9 @@
   <package id="Microsoft.Extensions.FileSystemGlobbing" version="2.0.1" targetFramework="net461" />
   <package id="Microsoft.Extensions.Logging" version="2.1.0-preview1-final" targetFramework="net461" />
   <package id="Microsoft.Extensions.Logging.Abstractions" version="2.1.0-preview1-final" targetFramework="net461" />
+  <package id="Microsoft.Extensions.Logging.Configuration" version="2.0.1" targetFramework="net461" />
   <package id="Microsoft.Extensions.Options" version="2.1.0-preview1-final" targetFramework="net461" />
+  <package id="Microsoft.Extensions.Options.ConfigurationExtensions" version="2.0.1" targetFramework="net461" />
   <package id="Microsoft.Extensions.Primitives" version="2.1.0-preview1-final" targetFramework="net461" />
   <package id="Microsoft.jQuery.Unobtrusive.Ajax" version="3.2.4" targetFramework="net461" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.4" targetFramework="net461" />
