--- a/Src/Sample/Sample.CommandServiceCore/appsettings.json
+++ b/Src/Sample/Sample.CommandServiceCore/appsettings.json
@@ -3,6 +3,7 @@
     "SampleModelContext": "Server=(localdb)\\projects;Database=SampleModelContext.Core;Integrated Security=true;"
   },
   "AppSettings": {
+    "App": "CommandServiceCore", 
     "Member:A": "ddd",
     "CommandTypeTemplate": "Sample.Command.{0}, Sample.Command"
   },
